$Id$

NOTE: This is the 1.3.0 development branch.
Put code changes right below the 1.3.0+CVS label below.

Version 1.3.0+CVS (?? ??? 2011)
 - 27-Sep-11 Remove includes/js/assistant_edit.php.
   Replaced with includes/js/assistant_edit.js some time ago.
   Add includes/js/category.js. Move some javascript out of category.php.
   And more changes like yesterday.
   Starting to move punctuation out of the code and into English-US.txt.
     Not everyone uses "()", ":" and such as in English.
     This is going to do things like "admin", "(admin)", "[admin]" and "admin:"
     but, until we get the universal translator from Star Fleet... :)
 - 26-Sep-11 Init some often used "$Str = translate(phrase)" in translate.php.
   Use foreach() to shorten a few files a bit.
   Shrink a few bits of code.
   Put "// translate(phrases)" back in .js files instead of translate.js.php to better show where they are used.
   Upload some javascript that will be useful with HTML5/CSS3.
     See "about.php" and "includes/js/about.js" for an example of one new function.
   Consolidated some duplicate functions into one file; "js/base.js".
   Moved call for "js/translate.js.php" into function print_header.
     No sense in calling it from several places.
   Checking filemtime to get the newest files is not working as well as I had hoped.
     So, removing them from init.php.
   I think I've fixed the problems with the top menu.
   I'm running most .js files through a formatter.
     It helps, IMMENSELY, in finding bugs. :)
     Though it does mess with the whitespace.  :(
     Well, maybe it won't change so much in the future.
 - 12-Sep-11 bb Begin updating to HTML5 / CSS 3.
   HTML5 takes the minimalist approach - What is the bare minimum code to make
   all browsers since NS4 / IE4 display the same in standards mode.
 - 8-Jul-11 cek Fixed XSS vulnerability: malicious javascript in event
   descriptions submitted by public can do bad things (create admin account,