@@ -1,11 +1,0 @@
-<?php
-/* $Id$
-
-It sucks to have 1 variable
-messing up an otherwise nice javascript file...
-*/
-echo 'var arinctri = ' . $arinc[3] . ';
-
-';
-
-?>
